--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "coverage": "nyc --reporter=lcov --reporer=text npm run test"
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test"
   },
   "keywords": [],
   "author": "",
