--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
         "@wdio/spec-reporter": "^7.20.7",
         "chromedriver": "^102.0.0",
         "wdio-chromedriver-service": "^7.3.2",
-        "wdio-edgedriver-service": "^1.2.0"
+        "wdio-edgedriver-service": "^1.2.0",
+        "yargs": "^17.4.1"
     },
     "scripts": {
-        "test": "wdio run wdio.conf.js"
+        "test": "npx wdio wdio.conf.js -b chrome"
     }
 }
